@@ -13,10 +13,11 @@ Upgrading from v3.1.1
 ---------------------
 - The RELATIONS type declaration in Active Record classes for Many-to-Many using
   an association table was change from "self::HAS_MANY" to "self::MANY_TO_MANY".
-  E.g. change 
+  E.g. change
      'albums' => array(self::HAS_MANY, 'Artist', 'album_artists')
   to
      'albums' => array(self::MANY_TO_MANY, 'Artist', 'album_artists')
+- Active Record no longer automatically adds/removes/updates related objects.
 
 
 Upgrading from v3.1.0
